kube-infra/kustomize/observability/grafana/envs/prod/grafana-ingress-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-development-aws
  name: grafana
  namespace: observability
  labels:
    backstage.io/kubernetes-id: grafana
    ortelius.io/repo: ortelius-kubernetes
spec:
  rules:
    - host: grafana.bradmccoy.io
      http:
        paths:
        - backend:
            service:
              name: grafana
              port:
                number: 80
          path: /
          pathType: Prefix
